--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
     <!--Buttom bar-->
     <style name="IconBottomBar">
         <item name="android:layout_width">34dp</item>
@@ -15,6 +16,46 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <!--conta-->
+    <style name="BtnPadraoConta">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:paddingStart">15dp</item>
+    </style>
+
+    <style name="TxtPadraoConta">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+<!--Pesquisa evento-->
+    <!--Card pesquisa-->
+    <style name="CardBasePesquisa">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">160dp</item>
+        <item name="android:layout_margin">25dp</item>
+    </style>
+
+    <style name="ImgCardBasePesquisa">
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginEnd">35dp</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="TxtCardBasePesquisa">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">130dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 <!--Info evento-->
     <style name="TxtInfoEvento">
         <item name="android:layout_width">wrap_content</item>
@@ -23,4 +64,32 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <!--Ingresso  evento-->
+    <style name="TxtIngressoFaixa">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginStart">30dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TxtIngressoPreco">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginStart">30dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="iconseta">
+        <item name="android:layout_width">35dp</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:layout_marginStart">30dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+    </style>
 </resources>
