--- a/app/src/main/res/layout/activity_meus_ingressos.xml
+++ b/app/src/main/res/layout/activity_meus_ingressos.xml
@@ -4,83 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".Favortios">
+    tools:context=".Meus_Ingressos">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="68dp"
+        android:drawingCacheQuality="high"
+        android:letterSpacing="0.05"
+        android:text="@string/txtIngresso"
+        android:textColor="@color/AzulBase"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView22"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:drawingCacheQuality="high"
-            android:letterSpacing="0.05"
-            android:text="@string/TxtFavoritos"
-            android:textColor="@color/AzulBase"
-            android:textSize="26sp"
-            android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="308dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="132dp"
+        android:background="@drawable/icon_tela_favorito"
+        android:contentDescription="@string/descImgDesenhoHisteVazio"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <View
-            android:id="@+id/divider1"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="15dp"
-            android:background="#dcdcdc"/>
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:fontFamily="sans-serif"
+        android:text="@string/TxtIngressoMensagem"
+        android:textAlignment="center"
+        android:textColor="@color/AzulBase"
+        android:textSize="22sp"
+        android:paddingEnd="50dp"
+        android:paddingStart="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView16" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view1"
-            android:layout_height="130dp"
-            style="@style/CardBasePesquisa"
-            app:cardCornerRadius="10dp"
-            tools:ignore="MissingConstraints">
+    <Button
+        android:id="@+id/BtnProcuraEventos"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="45dp"
+        android:backgroundTint="@color/AzulBase"
+        android:textColor="@color/white"
+        android:text="@string/TxtbtnBuscar"
+        android:textAllCaps="false"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
-            <ImageView
-                android:id="@+id/imageView1"
-                style="@style/ImgCardBasePesquisa"
-                android:layout_width="90dp"
-                android:layout_height="130dp"
-                android:contentDescription="@string/descImgCartaz"
-                app:srcCompat="@drawable/poster5" />
-
-            <TextView
-                android:id="@+id/textView11"
-                style="@style/TxtCardBasePesquisa"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="100dp"
-                android:text="@string/TxtNomeEvento1"
-                android:textSize="16sp" />
-
-
-            <TextView
-                android:id="@+id/textView13"
-                style="@style/TxtCardBasePesquisa"
-                android:layout_width="130dp"
-                android:layout_marginTop="70dp"
-                android:layout_marginStart="100dp"
-                android:text="@string/TxtHoraEvento1"
-                android:textSize="14sp" />
-
-            <CheckBox
-                android:id="@+id/CkboxFav"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="end"
-                android:layout_marginTop="80dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="160dp"
-                android:background="@drawable/favorito_preenchido"
-                android:button="@color/AzulBase"
-                android:onClick="onCheckboxClicked"/>
-
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -153,6 +135,5 @@
             android:text="@string/TxtFavoritosBar"/>
 
     </androidx.cardview.widget.CardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
