--- a/app/src/main/res/layout/activity_info_evento.xml
+++ b/app/src/main/res/layout/activity_info_evento.xml
@@ -113,6 +113,7 @@
 
 
             <TextView
+                android:id="@+id/TXTlocalEvento"
                 style="@style/TxtInfoEvento"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="-25dp"
