--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -16,6 +16,24 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <!-- Home-->
+    <style name="ImgEventos">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:clickable">true</item>
+        <item name="android:backgroundTint">#00FFFFFF</item>
+        <item name="android:layout_marginTop">-100dp</item>
+    </style>
+
+    <style name="txtEventos">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_marginTop">5dp</item>
+    </style>
+
     <!--conta-->
     <style name="BtnPadraoConta">
         <item name="android:layout_width">match_parent</item>
