--- a/app/src/main/res/layout/activity_meus_ingressos.xml
+++ b/app/src/main/res/layout/activity_meus_ingressos.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/textView26"
+        android:id="@+id/TXtMensagIngresso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
@@ -61,7 +61,7 @@
         android:paddingBottom="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+        app:layout_constraintTop_toBottomOf="@+id/TXtMensagIngresso" />
 
 
     <androidx.cardview.widget.CardView
