--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -28,21 +28,19 @@
                 android:background="@color/white">
 
                 <TextView
-                    android:id="@+id/txtView7"
+                    android:id="@+id/txtViewName"
                     style="@style/TxtPadraoConta"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="30dp"
-                    android:text="@string/TxtNomeUser"
+                    android:layout_marginTop="20dp"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/txtView28"
+                    android:id="@+id/txtViewEmail"
                     style="@style/TxtPadraoConta"
-                    android:layout_marginStart="18dp"
-                    android:layout_marginTop="70dp"
-                    android:text="@string/TxtEmailUser"
-                    android:textSize="14sp"/>
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="55dp"
+                    android:textSize="14sp" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -54,7 +52,7 @@
                 android:textStyle="bold"/>
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/info_conta"
                 style="@style/BtnPadraoConta"
                 android:layout_marginTop="5dp"
                 android:text="@string/TxtInfoConta"/>
