--- a/app/src/main/res/layout/activity_favortios.xml
+++ b/app/src/main/res/layout/activity_favortios.xml
@@ -76,7 +76,8 @@
                 android:layout_marginBottom="160dp"
                 android:background="@drawable/favorito_preenchido"
                 android:button="@color/AzulBase"
-                android:onClick="onCheckboxClicked"/>
+                android:clickable="true"
+                android:onClick="onCheckboxClicked" />
 
         </androidx.cardview.widget.CardView>
 
