--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -104,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_margin="10dp"
-                android:text="@string/TxtUserAvaliacao"
+                android:text="@string/txtSuaAvaliacao"
                 android:textColor="@color/black"
                 android:textSize="14sp"/>
 
