--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -59,7 +59,7 @@
 
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/btnCupom"
                 style="@style/BtnPadraoConta"
                 android:text="@string/TxtCuponsCred"/>
 
