Adicionado armazenamento externo, junto com a tela Cupons e Creditos

--- a/app/src/main/res/layout/activity_tela_opiniao.xml
+++ b/app/src/main/res/layout/activity_tela_opiniao.xml
@@ -31,9 +31,9 @@
     <TextView
         android:id="@+id/textView2"
         style="@style/BtnPadraoConta"
-        android:textSize="22sp"
+        android:text="@string/TxtSuaAvaliacao"
         android:textAlignment="center"
-        android:text="@string/txtSuaAvaliacao"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/edAvaliacao"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myRectangleView5" />
@@ -56,14 +56,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:onClick="salvar"
-        android:text="@string/txtEnviar"
         android:background="@drawable/borda_aredondada"
-        app:backgroundTint="@color/AzulClaro"
+        android:onClick="salvar"
         android:padding="10dp"
+        android:text="@string/TxtEnviar"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp"
+        app:backgroundTint="@color/AzulClaro"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
