--- a/app/src/main/res/layout/activity_conta.xml
+++ b/app/src/main/res/layout/activity_conta.xml
@@ -104,9 +104,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_margin="10dp"
-                android:text="@string/txtSuaAvaliacao"
+                android:text="@string/TxtSuaAvaliacao"
                 android:textColor="@color/black"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/button6"
